static/styles/zulip.css
/* ... */
.unread_marker {
    display: block;
    position: absolute;
    left: 2px;
    top: 0px;
    padding-bottom: 2px;
    opacity: 0;
    z-index: 1;
    height: 100%;
    -webkit-transition: all 0.3s ease-out;
    -moz-transition: all 0.3s ease-out;
    -o-transition: all 0.3s ease-out;
    transition: all 0.3s ease-out;
}

.unread-marker-fill {
    background: #2b8213;
    width: 3px;
    height: 100%;
    box-shadow: inset 0px -1px 0px 0px #ffffff;
}

.last_message .unread-marker-fill {
    box-shadow: none;
}

.unread .unread_marker {
    -webkit-transition: all 0.3s ease-out;
    -moz-transition: all 0.3s ease-out;
    -o-transition: all 0.3s ease-out;
    transition: all 0.3s ease-out;
    opacity: 1;
}

.unread_marker.slow_fade {
    -webkit-transition: all 2s ease-out;
    -moz-transition: all 2s ease-out;
    -o-transition: all 2s ease-out;
    transition: all 2s ease-out;
}

.unread_marker.fast_fade {
    -webkit-transition: all 0.3s ease-out;
    -moz-transition: all 0.3s ease-out;
    -o-transition: all 0.3s ease-out;
    transition: all 0.3s ease-out;
}

.selected_message .messagebox {
    z-index: 1;
}

.selected_message .messagebox-content {
    box-shadow: inset 0px 0px 0px 2px #4577bc,
                     -1px -1px 0px 0px #4577bc,
                      1px 1px 0px 0px #4577bc,
                     -1px 1px 0px 0px #4577bc,
                      1px -1px 0px 0px #4577bc;
}

.message_sender {
    height: 0px;
    vertical-align: top;
    position: relative;
}

.sender_name {
    color: #333;
    display: inline-block;
    font-weight: 700;
    vertical-align: top;
    line-height: 12px;
    font-size: 14px;
}

.sender-status {
    display: block;
    left: 45px;
    top: -26px;
    padding-bottom: 6px;
    padding-right: 35px;
    vertical-align: middle;
    line-height: 18px;
    font-size: 14px;
    position: relative;
}

.message_controls.sender-status-controls {
    top: 10px;
}

.sender_name-in-status {
    margin-right: 3px;
    font-weight: 700;
}

.sender_name_hovered .sender_name,
.sender_name_hovered .sender_name-in-status {
    color: #0088CC;
}

.sender_name_hovered .inline_profile_picture {
    border-color: #0088CC;
}

.actions_hover:hover {
    color: #0088CC;
}

.message_failed,
.message_local {
    display: inline-block;
    cursor: pointer;
    font-size: 13px;
}

.message_failed {
    font-weight: bold;
    color: red;
    padding: 0px 1px 0px 1px;
}

.message_failed i {
    margin-left: 2px;
    margin-right: 2px;
}

a.message_label_clickable:hover {
    cursor: pointer;
    color: #08C;
}

.on_hover_topic_edit {
    opacity: .1;
}

.always_visible_topic_edit {
    opacity: .7;
}

.on_hover_topic_edit:hover,
.always_visible_topic_edit:hover {
    cursor: pointer;
    opacity: 1.0;
}

.edit_content {
    opacity: .4;
    width: 0px;
    height: 0px;
    display: inline-block;
    position: relative;
}

.edit_content i {
    position: absolute;
    display: block;
    background: #ffffff;
    top: -0.9em;
    left: 0.4em;
    border-radius: 1px;
    padding: 1px 2px;
    border: 1px dotted #ccc;
}

.edit_content:hover {
    cursor: pointer;
    opacity: 1.0;
}

/* Brighten text because of the dark background */
.dark_background a,
.dark_background a:hover,
a.dark_background:hover,
.dark_background {
    color: #ffffff !important;
}

.dark_background a.message_label_clickable:hover {
    color: #3BF;
}

.message_top_line {
    position: relative;
}

.include-sender .message_top_line {
    margin-top: 6px;
}

.message-right {
    float: right;
}

.small {
    font-size: 80%;
}

.tiny {
    font-size: 60%;
}

.actions_hovered .message_time,
.actions_hovered .info {
    color: #0088CC;
    cursor: pointer;
}

.message_hovered .info,
.message_hovered .empty-star {
    visibility: visible;
}

.actions_hovered .actions_link {
    text-decoration: underline;
}

div.message_table {
    border-collapse: separate;
    margin-left: auto;
    display: none;
    width: 100%;
}

.message_row {
    position: relative;
    border-left: 1px solid #e2e2e2;
    border-right: 1px solid #e2e2e2;
}

.message_row.selected_message {
    z-index: 2;
}

div.focused_table {
    display: block;
}

.include-sender .message_content {
    margin-top: -16px;
}

.message_content {
    line-height: 17px;
    font-size: 14px;
    padding-left: 46px;
    display: block;
    position: relative;
}

.message_edit_content {
    line-height: 18px;
}

.message_edit_countdown_timer {
    text-align: right;
    display: inline;
    color: #a1a1a1;
}

.message_edit_tooltip {
    display: inline;
    color: #a1a1a1;
}

.message-edit-timer-control-group {
    float: right;
    display: none;
}

.topic_edit {
    display: none;
    line-height: 22px;
}

#inline_topic_edit,
#message_edit_topic {
    margin-bottom: 5px;
}

#inline_topic_edit.header-v {
    height: 18px;
    display: inline-block;
    margin: -2px 0 0 0;
    padding: 0px 3px;

    line-height: 0px;
    font-size: 14px;

    border-radius: 0px;
    border: 1px solid #afbfca;
    box-shadow: none;
}

#inline_topic_edit:focus,
#message_edit_topic:focus {
    outline: none;
}

.message_edit_topic_propagate {
    display: inline-block;
    width: 300px;
    margin-bottom: 5px !important;
    max-width: 100%;
}

.message_content.condensed {
    max-height: 8.5em;
    overflow: hidden;
}
.message_content.collapsed {
    max-height: 0em;
    overflow: hidden;
}

.message_length_controller {
    display: none;
    text-align: center;
    color: #0088CC;

    /* to match .message_content */
    margin-left: 5px;
    margin-right: 35px;
}

.message_length_controller:hover {
    text-decoration: underline;
}

div.message_content table {
    padding-right: 10px;
    margin: 5px 5px 5px 5px;
    width: 99%;
}

div.message_content thead {
    background-color: #EFEFEF;
}

div.message_content div {
    display: table-row;
    vertical-align: inherit;
}

div.message_content div {
    border: 1px solid #cccccc;
    padding: 4px;
    text-align: left;
}
/* ... */

